# codex-account-switcher-cli

./: .env.example  .gitignore  AGENTS.md  CODEBASE_IMPROVEMENT_IDEAS.md  README.md  docker-compose.prod.yml  docker-compose.yml  imdeadpool-codex-account-switcher-0.1.6.tgz  package-lock.json  package.json  pyproject.toml  redeploy.sh  tsconfig.json
.agents/: settings.json
.agents/commands/: musafety.md
.agents/conventions/: git-workflow.md
.agents/hooks/: skill_guard.py
.githooks/: pre-commit
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: omx-2026-04-22.jsonl  tmux-hook-2026-04-22.jsonl  turns-2026-04-22.jsonl
.omx/state/: current-task-baseline.json  session.json  subagent-tracking.json  tmux-hook-state.json
.serena/: project.yml
app/: dependencies.py  main.py
app/db/: models.py
app/tools/: codex_auth_sync_all.py  codex_runtime_handoff.py  codex_session_reconcile.py
apps/backend/: README.md  medusa-config.ts  tsconfig.json
apps/frontend/: .gitignore  next.config.mjs  tsconfig.json
codex-account-switcher/: README.md  package-lock.json  package.json
codex-account-switcher/releases/: v0.1.6.md
codex-account-switcher/scripts/: postinstall-login-hook.cjs
docs/future/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-COMMANDS.md  02-CORE-LIBRARY-IMPROVEMENTS.md  03-COMMANDS-IMPROVEMENTS.md  04-ACCOUNTS-MODULE.md  05-CONFIG-AND-PATHS.md  06-AUTO-SWITCH-AND-DAEMON.md  07-USAGE-REFRESH-AND-API.md  08-HOOKS-AND-SHELL-INTEGRATION.md  09-MULTI-CLI-SUPPORT.md  10-SECURITY-AND-SECRETS.md  11-TESTING-STRATEGY.md  14-CROSS-PLATFORM.md  (+6 more)
frontend/: .gitignore  README.md  eslint.config.js  index.html  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
multiagent-safety/: README.md  package.json
releases/: v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.25.md
rust/: Cargo.toml  README.md
rust/codex-lb-runtime/: Cargo.toml
rust/codex-lb-runtime/src/: main.rs
rust/codex-lb-runtime/src/runtime/: contracts.rs  daemon_contracts.rs  mod.rs  proxy.rs  responses_bridge.rs  schedulers.rs  state.rs
scripts/: agent-autofinish-watch.sh  agent-branch-finish.sh  agent-branch-start.sh  agent-sync-on-base-update.sh  agent-worktree-prune.sh  claude-parallel-setup.sh  dev-all.bash  dev-all.sh  dev-auto.sh  dev-logs.sh  gh-pr-review-autofix-watch.sh  gh-pr-review-autofix.sh  kiro_account_switcher.py  main_rs_lock.py  postinstall-login-hook.cjs  run-rust-runtime-dev.sh  run-server-dev.sh  run-tests.cjs  verify-rust-runtime-guardrails.sh  watch-frontend-build.py
src/: index.ts
tests/: conftest.py
(+1109 files in other folders)
