[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "codex-lb"
version = "1.10.0"
description = "Codex account manager and proxy runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.3",
  "aiohttp-retry>=2.9.1",
  "aiosqlite>=0.22.1",
  "alembic>=1.16.5",
  "asyncpg>=0.30.0",
  "bcrypt>=4.3.0",
  "brotli>=1.2.0",
  "cryptography>=46.0.3",
  "fastapi[standard]>=0.128.0",
  "greenlet>=3.3.0",
  "psycopg[binary]>=3.2.12",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "pyotp>=2.9.0",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.21",
  "segno>=1.6.6",
  "sqlalchemy>=2.0.45",
  "websockets>=16.0",
  "zstandard>=0.25.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.20"]
tracing = [
  "opentelemetry-api>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-aiohttp-client>=0.46",
  "opentelemetry-instrumentation-fastapi>=0.46",
  "opentelemetry-instrumentation-sqlalchemy>=0.46",
  "opentelemetry-sdk>=1.25",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "openai>=2.16.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.13",
  "ty>=0.0.12",
]
